--- a/app/src/scss/variables.scss
+++ b/app/src/scss/variables.scss
@@ -11,7 +11,9 @@ $grey_dark2: rgb(122, 122, 122);
 $warning: #fcb75c;
 $red: #dc3545;
 $orange: #fc965c;
-$green: #64db59;
+$green: #2ebe21;
+
+$blue: #2933fe;
 
 $white: #fff;
 $black: #000;
